# pathtracer

./: .gitignore  Cargo.toml  README.md  build.rs  cornell_box.toml  default.nix  lint.sh  scene.toml  shell.nix
.cargo/: config.toml
.github/workflows/: CI.yaml  tests.yaml
oidn/: .gitignore
scenes/: checkered_floor.toml  cornell_box.toml  mirror_ball.toml  red_ball.toml  scene.toml
src/: lib.rs  main.rs
src/camera/: mod.rs
src/light/: arealight.rs  mod.rs  pointlight.rs
src/material/: mod.rs
src/object/: aabb.rs  box.rs  bvh.rs  cube.rs  mod.rs  plane.rs  quad.rs  sphere.rs  triangle_mesh.rs
src/pathtracer/: mod.rs
src/ray/: mod.rs
src/scene/: mod.rs
src/skybox/: mod.rs
src/utils/: matrix.rs  mod.rs  vector.rs  vector_constgenerics.rs  vector_hardcoded.rs
tests/: sample_test.toml  tests.rs
