[package]
name = "pathtracer"
version = "0.1.0"
edition = "2021"

[features]
default = ["oidn", "vector_constgenerics"]
small_rng = ["rand/small_rng"]
oidn = ["dep:oidn", "dep:flate2", "dep:tar", "dep:zip", "dep:futures"]
vector_constgenerics = []

[dependencies]
cfg-if = "1.0.0"
num-traits = "0.2.18"
oidn = { git = "https://github.com/Twinklebear/oidn-rs.git", optional = true }
png = "0.17.13"
rand = { version = "0.8.5" }
rayon = "1.10.0"
toml = "0.8.12"

[dev-dependencies]
float-cmp = "0.9.0"

[build-dependencies]
futures = { version = "0.3.31", optional = true }
flate2 = { version = "1.0.28", optional = true }
tar = { version = "0.4.40", optional = true }
tokio = { version = "1.37.0", features = ["full"], optional = false }
zip = { version = "0.6.6", features = ["flate2"], optional = true }

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = true
lto = true
opt-level = 3
overflow-checks = false
panic = "unwind"
rpath = true
split-debuginfo = "off"
strip = "symbols"
