[package]
name = "pathtracer"
version = "0.1.0"
edition = "2024"

[features]
default = ["oidn", "vector_constgenerics"]
oidn = ["dep:oidn", "dep:flate2", "dep:tar", "dep:zip"]
vector_constgenerics = []

[dependencies]
cfg-if = "1.0.4"
num-traits = "0.2.19"
oidn = { git = "https://github.com/float3/oidn-rs.git", optional = true }
png = "0.18.1"
rand = { version = "0.10.1" }
rayon = "1.12.0"
toml = "1.1.2"

[dev-dependencies]
float-cmp = "0.10.0"

[build-dependencies]
flate2 = { version = "1.1.9", optional = true }
tar = { version = "0.4.45", optional = true }
zip = { version = "8.6.0", features = [], optional = true }

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = true
lto = true
opt-level = 3
overflow-checks = false
panic = "unwind"
rpath = true
split-debuginfo = "off"
strip = "symbols"
